src/styles/site.css
/* Site-wide styles. */

:root {
	--text-color: #373737;
	--background-color: white;
}

body{
	background-color: var(--background-color);
	color: var(--text-color);

	max-width: 60ch;
	margin: 2rem auto;
	padding: 0 20px;

	line-height: 1.6;
	font-family: "Hoefler Text", "Baskerville Old Face", Garamond, "Times New Roman", serif;
}

h1, h2, h3 { line-height: 1.2; }

footer {
	text-align: center;
	font-size: small;
	margin-block: 2rem;
}

/** Don't want blue links! Single underline is pretty stylish? */
a { color: inherit; }
a:hover { text-decoration: none; }

details, pre {
	padding: 1rem;
		border-radius: 3px;
	background-color: #eee;
}
details > pre { padding: 0; margin-bottom: 0; } /* HACK: avoid double spacing */
details > summary { font-family: "helvetica neue", helvetica, sans-serif; }
details summary::marker { content: "👉\0000a0\0000a0"; /* HACK */ }
details[open]   summary::marker { content: "👇\0000a0\0000a0"; }


hr::after { /* Display three asterisks */
	font-size: 20px;
	color: #c6c6c6;

	content: "✻\0000a0✻\0000a0✻";
	display: block;
	text-align: center;
}
hr {
	margin-block: 20px;
	height: auto;
	border: 0;
}

pre {
	overflow-x: auto;
	line-height: 1;
}

code {
	font-family: Courier, monospace;
	font-size: 0.875em; /* Courier appears taller than system font at 1em */

	/* This will not have an effect on code inside pre's but will affect inline code elements.
	 * Without this lines with long inline code are broken weirdly */
	word-break: break-all;
}

img {
	box-shadow: 4px 2px 8px 2px rgb(0 0 0 / 9%);
	border-radius: 7px;
	max-width: 100%;
}
@media all and (min-width: 700px) {
	img {
		max-width: 80%;
		display: block;
		margin-inline: auto;
	}

	/* When the body is too wide, there's a lot of negative space on the
	 * sides and it looks weird that the content is pushing against the top
	 * of the screen.
	 *
	 * This formula is very unscientific and could probably be improved. */
	body {
		margin-top: min(calc((100% - 60ch) / 2), 20vh);
	}
}

/* Make sure footnote refs aren't included when copy/pasting */
a[data-footnote-ref] {
  user-select: none;
}

